Approaching done with the technical summary

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -46,20 +46,7 @@
   langid = {english}
 }
 
-@book{baddeleyHybridsGibbsPoint2013,
-  title = {Hybrids of {{Gibbs Point Process Models}} and {{Their Implementation}}},
-  author = {Baddeley, Adrian and Rubak, Ege and Turner, Rolf and Baddeley, Adrian and Turner, Rolf and Mateu, Jorge and Bevan, Andrew},
-  year = {2013},
-  journal = {Journal of Statistical Software},
-  volume = {55},
-  publisher = {{Chapman and Hall/CRC Press}},
-  address = {{London}},
-  doi = {10.18637/jss.v055.i11},
-  url = {https://www.routledge.com/Spatial-Point-Patterns-Methodology-and-Applications-with-R/Baddeley-Rubak-Turner/p/book/9781482210200/%7D,},
-  isbn = {978-1-4822-1020-0}
-}
-
-@article{baddeleyHybridsGibbsPoint2013a,
+@article{Baddeley.etalHybridsGibbsPoint2013,
   title = {Hybrids of {{Gibbs Point Process Models}} and {{Their Implementation}}},
   author = {Baddeley, Adrian and Turner, Rolf and Mateu, Jorge and Bevan, Andrew},
   year = {2013},
@@ -70,7 +57,7 @@
   doi = {10.18637/jss.v055.i11}
 }
 
-@book{baddeleySpatialPointPatterns2015,
+@book{Baddeley.etalSpatialPointPatterns2015,
   title = {Spatial {{Point Patterns}}: {{Methodology}} and {{Applications}} with {{R}}},
   author = {Baddeley, Adrian and Rubak, Ege and Turner, Rolf},
   year = {2015},
@@ -80,7 +67,7 @@
   isbn = {978-1-4822-1020-0}
 }
 
-@article{baddeleySpatstatPackageAnalyzing2005,
+@article{Baddeley.TurnerSpatstatPackageAnalyzing2005,
   title = {Spatstat: {{An R Package}} for {{Analyzing Spatial Point Patterns}}},
   author = {Baddeley, Adrian and Turner, Rolf},
   year = {2005},
@@ -89,42 +76,6 @@
   number = {6},
   pages = {1--42},
   doi = {10.18637/jss.v012.i06}
-}
-
-@article{baddeleySpatstatPackageAnalyzing2005a,
-  title = {Spatstat: {{An R Package}} for {{Analyzing Spatial Point Patterns}}},
-  author = {Baddeley, Adrian and Turner, Rolf},
-  year = {2005},
-  journal = {Journal of Statistical Software},
-  volume = {12},
-  number = {6},
-  pages = {1--42},
-  doi = {10.18637/jss.v012.i06}
-}
-
-@article{batjesWoSISProvidingStandardised2017,
-  title = {{{WoSIS}}: Providing Standardised Soil Profile Data for the World},
-  shorttitle = {{{WoSIS}}},
-  author = {Batjes, Niels H. and Ribeiro, Eloi and Van Oostrum, Ad and Leenaars, Johan and Hengl, Tom and Mendes De Jesus, Jorge},
-  year = {2017},
-  month = jan,
-  journal = {Earth System Science Data},
-  volume = {9},
-  number = {1},
-  pages = {1--14},
-  issn = {1866-3516},
-  doi = {10.5194/essd-9-1-2017},
-  url = {https://essd.copernicus.org/articles/9/1/2017/},
-  urldate = {2023-06-20},
-  abstract = {Abstract. The aim of the World Soil Information Service (WoSIS) is to serve quality-assessed, georeferenced soil data (point, polygon, and grid) to the international community upon their standardisation and harmonisation. So far, the focus has been on developing procedures for legacy point data with special attention to the selection of soil analytical and physical properties considered in the GlobalSoilMap specifications (e.g. organic carbon, soil pH, soil texture (sand, silt, and clay), coarse fragments (\,{$<$}\,\,2\,mm), cation exchange capacity, electrical conductivity, bulk density, and water holding capacity). Profile data managed in WoSIS were contributed by a wide range of soil data providers; the data have been described, sampled, and analysed according to methods and standards in use in the originating countries. Hence, special attention was paid to measures for soil data quality and the standardisation of soil property definitions, soil property values, and soil analytical method descriptions. At the time of writing, the full WoSIS database contained some 118\,400 unique shared soil profiles, of which some 96\,000 are georeferenced within defined limits. In total, this corresponds with over 31~million soil records, of which some 20\,\% have so far been quality-assessed and standardised using the sequential procedure discussed in this paper. The number of measured data for each property varies between profiles and with depth, generally depending on the purpose of the initial studies. Overall, the data lineage strongly determined which data could be standardised with acceptable confidence in accord with WoSIS procedures, corresponding to over 4~million records for 94\,441~profiles. The publicly available data \textendash{} WoSIS snapshot of July~2016 \textendash{} are persistently accessible from ISRIC WDC-Soils through doi:10.17027/isric-wdcsoils.20160003.},
-  langid = {english}
-}
-
-@book{bergmannCancensusPackageAccess2021,
-  title = {Cancensus: {{R}} Package to Access, Retrieve, and Work with {{Canadian Census}} Data and Geography},
-  author = {von Bergmann, Jens and Shkolnik, Dmitry and Jacobs, Aaron},
-  year = {2021},
-  url = {https://mountainmath.github.io/cancensus/}
 }
 
 @article{Bianucci.etalPlagueImmunodetectionRemains2009,
@@ -141,13 +92,6 @@
   url = {https://linkinghub.elsevier.com/retrieve/pii/S0305440308002446},
   urldate = {2023-07-06},
   langid = {english}
-}
-
-@book{bivandMaptoolsToolsHandling2023,
-  title = {Maptools: {{Tools}} for {{Handling Spatial Objects}}},
-  author = {Bivand, Roger and {Lewin-Koh}, Nicholas},
-  year = {2023},
-  url = {https://CRAN.R-project.org/package=maptools}
 }
 
 @article{Bramanti.etalThirdPlaguePandemic2019,
@@ -211,13 +155,6 @@
   pmcid = {PMC2630035},
   pmid = {18575083},
   keywords = {Animals,Arthropod Vectors,Europe,{History, Medieval},Humans,Pandemics,Plague,Siphonaptera,Terminology as Topic,Yersinia pestis}
-}
-
-@misc{commonsFileSIRModel2020,
-  title = {File:{{SIR}} Model Simulated Using Python.Gif \textemdash{} {{Wikimedia Commons}}, the Free Media Repository},
-  author = {Commons, Wikimedia},
-  year = {2020},
-  url = {https://commons.wikimedia.org/w/index.php?title=File:SIR_model_simulated_using_python.gif&oldid=496246274}
 }
 
 @article{CurtisWasPlagueExclusively2016,
@@ -347,12 +284,7 @@
   langid = {english}
 }
 
-@misc{governmentofontario:ministryoftheenvironmentconservation&parksAQUIS2021Data,
-  title = {{{AQUIS}}: 2021 {{Data}}},
-  author = {{Government of Ontario: Ministry of the Environment, Conservation \& Parks}}
-}
-
-@article{gralerSpatioTemporalInterpolationUsing2016,
+@article{Graler.etalSpatioTemporalInterpolationUsing2016,
   title = {Spatio-{{Temporal Interpolation}} Using Gstat},
   author = {Gr{\"a}ler, Benedikt and Pebesma, Edzer and Heuvelink, Gerard},
   year = {2016},
@@ -380,18 +312,34 @@
   langid = {english}
 }
 
-@book{hijmansRasterGeographicData2023,
+@book{HijmansRasterGeographicData2023,
   title = {Raster: {{Geographic Data Analysis}} and {{Modeling}}},
   author = {Hijmans, Robert J.},
   year = {2023},
   url = {https://CRAN.R-project.org/package=raster}
 }
 
-@book{hijmansTerraSpatialData2023,
+@book{HijmansTerraSpatialData2023,
   title = {Terra: {{Spatial Data Analysis}}},
   author = {Hijmans, Robert J.},
   year = {2023},
   url = {https://CRAN.R-project.org/package=terra}
+}
+
+@article{Hu.etalScalingContactRates2013,
+  title = {The Scaling of Contact Rates with Population Density for the Infectious Disease Models},
+  author = {Hu, Hao and Nigmatulina, Karima and Eckhoff, Philip},
+  year = {2013},
+  month = aug,
+  journal = {Mathematical Biosciences},
+  volume = {244},
+  number = {2},
+  pages = {125--134},
+  issn = {00255564},
+  doi = {10.1016/j.mbs.2013.04.013},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S0025556413001235},
+  urldate = {2023-08-15},
+  langid = {english}
 }
 
 @article{Hufthammer.WalloeRatsCannotHave2013,
@@ -458,22 +406,6 @@
   langid = {english}
 }
 
-@misc{kleingoldewijkHistoryDatabaseGlobal2022,
-  title = {History {{Database}} of the {{Global Environment}} 3.1},
-  author = {Klein Goldewijk, Kees G.M.},
-  year = {2022},
-  month = aug,
-  publisher = {{Utrecht University}},
-  doi = {10.24416/UU01-G4HO5I},
-  url = {https://public.yoda.uu.nl/geo/UU01/G4HO5I.html},
-  urldate = {2023-06-20},
-  abstract = {This database presents an update and expansion of the History Database of the Global Environment (HYDE, v 3.1).  HYDE is and internally consistent combination of updated historical population estimates and land use. Categories include cropland and grazing land. Population is represented by maps of total, urban, rural population and population density as well as built-up area.  The period covered is 10 000 BCE to 2015 CE. Spatial resolution is 5 arc minutes (approx. 85 km2 at the equator), the files are in Arcmap asciigrid format. Contact person: Kees Klein Goldewijk - c.g.m.kleingoldewijk@uu.nl Please note that this is an old version. The HYDE 3.1 release contains 4 zipped scenarios (Final estimate, Lower estimate, Upper estimate, Other scenarios), an Anthromes\_run and a Supplementary Files zip.},
-  collaborator = {Arthur, Beusen and Gerard, van Drecht and Martine, de Vos},
-  copyright = {Open - freely retrievable, Creative Commons Attribution 4.0 International Public License},
-  langid = {english},
-  keywords = {ASCII grid,cropland,global environmental change,HYDE,land use,Natural Sciences - Earth and related environmental sciences (1.5),pasture,population}
-}
-
 @misc{kleingoldewijkHistoryDatabaseGlobal2022a,
   title = {History {{Database}} of the {{Global Environment}} 3.2},
   author = {Klein Goldewijk, Kees G.M.},
@@ -490,23 +422,6 @@
   keywords = {ASCII grid,cropland,HYDE,land use,Natural Sciences - Earth and related environmental sciences (1.5),pasture,population,rice}
 }
 
-@article{kleingoldewijkHYDESpatiallyExplicit2011,
-  title = {The {{HYDE}} 3.1 Spatially Explicit Database of Human-Induced Global Land-Use Change over the Past 12,000 Years: {{HYDE}} 3.1 {{Holocene}} Land Use},
-  shorttitle = {The {{HYDE}} 3.1 Spatially Explicit Database of Human-Induced Global Land-Use Change over the Past 12,000 Years},
-  author = {Klein Goldewijk, Kees and Beusen, Arthur and Van Drecht, Gerard and De Vos, Martine},
-  year = {2011},
-  month = jan,
-  journal = {Global Ecology and Biogeography},
-  volume = {20},
-  number = {1},
-  pages = {73--86},
-  issn = {1466822X},
-  doi = {10.1111/j.1466-8238.2010.00587.x},
-  url = {https://onlinelibrary.wiley.com/doi/10.1111/j.1466-8238.2010.00587.x},
-  urldate = {2023-06-20},
-  langid = {english}
-}
-
 @techreport{Lazzari.etalDeathVeniceDigital2020,
   type = {Preprint},
   title = {Death in {{Venice}}: {{A Digital Reconstruction}} of a {{Large Plague Outbreak During}} 1630-1631},
@@ -520,20 +435,6 @@
   urldate = {2023-06-18},
   abstract = {Abstract                        The plague, an infectious disease caused by the bacterium             Yersinia pestis             , is widely considered to be responsible for the most devastating and deadly pandemics in human history. Starting with the infamous             Black Death             , plague outbreaks are estimated to have killed around 100 million people over multiple centuries, with local mortality rates as high as 60\%. However, detailed pictures of the disease dynamics of these outbreaks centuries ago remain scarce, mainly due to the lack of high-quality historical data in digital form. Here, we present an analysis of the 1630-31 plague outbreak in the city of Venice, using newly collected daily death records. We identify the presence of a two-peak pattern, for which we present two possible explanations based on computational models of disease dynamics. Systematically digitized historical records like the ones presented here promise to enrich our understanding of historical phenomena of enduring importance. This work contributes to the recently renewed interdisciplinary foray into the epidemiological and societal impact of pre-modern epidemics.},
   langid = {english}
-}
-
-@article{markpadghamOsmdata2017,
-  title = {Osmdata},
-  author = {{Mark Padgham} and {Bob Rudis} and {Robin Lovelace} and {Ma\"elle Salmon}},
-  year = {2017},
-  month = jun,
-  journal = {Journal of Open Source Software},
-  volume = {2},
-  number = {14},
-  pages = {305},
-  publisher = {{The Open Journal}},
-  doi = {10.21105/joss.00305},
-  url = {https://joss.theoj.org/papers/10.21105/joss.00305}
 }
 
 @misc{mccormickRomanRoadNetwork2013,
@@ -595,7 +496,7 @@
   langid = {english}
 }
 
-@article{pebesmaMultivariableGeostatisticsGstat2004,
+@article{PebesmaMultivariableGeostatisticsGstat2004,
   title = {Multivariable Geostatistics in {{S}}: The Gstat Package},
   author = {Pebesma, Edzer J.},
   year = {2004},
@@ -604,7 +505,7 @@
   pages = {683--691}
 }
 
-@article{pebesmaSimpleFeaturesStandardized2018,
+@article{PebesmaSimpleFeaturesStandardized2018,
   title = {Simple {{Features}} for {{R}}: {{Standardized Support}} for {{Spatial Vector Data}}},
   shorttitle = {Simple {{Features}} for {{R}}},
   author = {Pebesma, Edzer},
@@ -617,22 +518,6 @@
   doi = {10.32614/RJ-2018-009},
   url = {https://journal.r-project.org/archive/2018/RJ-2018-009/index.html},
   urldate = {2023-06-25},
-  langid = {english}
-}
-
-@book{pebesmaSpatialDataScience2023,
-  title = {Spatial {{Data Science}}: {{With Applications}} in {{R}}},
-  shorttitle = {Spatial {{Data Science}}},
-  author = {Pebesma, Edzer and Bivand, Roger},
-  year = {2023},
-  month = mar,
-  edition = {1},
-  publisher = {{Chapman and Hall/CRC}},
-  address = {{Boca Raton}},
-  doi = {10.1201/9780429459016},
-  url = {https://www.taylorfrancis.com/books/9780429459016},
-  urldate = {2023-06-25},
-  isbn = {978-0-429-45901-6},
   langid = {english}
 }
 
@@ -653,21 +538,7 @@
   langid = {english}
 }
 
-@misc{rambautSarscov2originsHuananmarketCorrection2023,
-  title = {Sars-Cov-2-Origins/Huanan-Market: {{Correction}} of Three Files with Median Distances to the {{Huanan}} Market},
-  shorttitle = {Sars-Cov-2-Origins/Huanan-Market},
-  author = {Rambaut, Andrew and Lemey, Philippe},
-  year = {2023},
-  month = may,
-  doi = {10.5281/ZENODO.6786454},
-  url = {https://zenodo.org/record/6786454},
-  urldate = {2023-06-25},
-  abstract = {Correction of the 'distance\_popdensityagegroups\_null\_35.csv' and 'distance\_popdensityagegroups\_null\_120.csv' files that were identical to each other. Also 'distance\_popdensityagegroups\_null\_155.csv' was updated to contain n = 1,000 distance used for all related analyses instead of n = 10,000.},
-  copyright = {Open Access},
-  howpublished = {Zenodo}
-}
-
-@book{rcoreteamLanguageEnvironmentStatistical2023,
+@book{RCoreTeamLanguageEnvironmentStatistical2023,
   title = {R: {{A Language}} and {{Environment}} for {{Statistical Computing}}},
   author = {{R Core Team}},
   year = {2023},
@@ -816,19 +687,6 @@
   langid = {english}
 }
 
-@misc{stamendesignMapTiles2023,
-  title = {Map Tiles},
-  author = {Stamen Design},
-  year = {2023},
-  url = {http://stamen.com},
-  copyright = {CC BY 3.0}
-}
-
-@misc{statisticscanadaPopulationDwellingCounts,
-  title = {Population and {{Dwelling Counts}}, for {{Canada}}, {{Provinces}} and {{Territories}}, 2021 {{Census}}},
-  author = {{Statistics Canada}}
-}
-
 @article{Stenseth.etalPlagueDynamicsAre2006,
   title = {Plague Dynamics Are Driven by Climate Variation},
   author = {Stenseth, Nils Chr. and Samia, Noelle I. and Viljugrein, Hildegunn and Kausrud, Kyrre Linn{\'e} and Begon, Mike and Davis, Stephen and Leirs, Herwig and Dubyanskiy, V. M. and Esper, Jan and Ageyev, Vladimir S. and Klassovskiy, Nikolay L. and Pole, Sergey B. and Chan, Kung-Sik},
@@ -863,7 +721,7 @@
   abstract = {Firsthand accounts of the Black Death in Europe and the Middle East and many subsequent historians have assumed that the pandemic originated in Asia and ravaged China and India before reaching the West. One reason for this conviction among modern historians is that the plague in the nineteenth century originated and did its worst damage in these countries. But a close examination of the sources on the Delhi Sultanate and the Yuan Dynasty provides no evidence of any serious epidemic in fourteenth-century India and no specific evidence of plague among the many troubles that afflicted fourteenth-century China.}
 }
 
-@article{tennekesTmapThematicMaps2018,
+@article{TennekesTmapThematicMaps2018,
   title = {Tmap: {{Thematic Maps}} in {{R}}},
   author = {Tennekes, Martijn},
   year = {2018},
@@ -874,7 +732,7 @@
   doi = {10.18637/jss.v084.i06}
 }
 
-@book{tennekesTmaptoolsThematicMap2021,
+@book{TennekesTmaptoolsThematicMap2021,
   title = {Tmaptools: {{Thematic Map Tools}}},
   author = {Tennekes, Martijn},
   year = {2021},
@@ -903,7 +761,7 @@
   keywords = {16th century,17th century,Diseases in literature,{Early modern, 1500-1700},England,English literature,Great Britain,History,History and criticism,Literature and medicine,Medicine in literature,Plague,Plague in literature}
 }
 
-@book{vanrossumPythonReferenceManual2009,
+@book{VanRossum.DrakePythonReferenceManual2009,
   title = {Python 3 {{Reference Manual}}},
   author = {Van Rossum, Guido and Drake, Fred L.},
   year = {2009},
@@ -912,7 +770,7 @@
   isbn = {1-4414-1269-7}
 }
 
-@article{wickhamWelcomeTidyverse2019,
+@article{Wickham.etalWelcomeTidyverse2019,
   title = {Welcome to the Tidyverse},
   author = {Wickham, Hadley and Averick, Mara and Bryan, Jennifer and Chang, Winston and McGowan, Lucy D'Agostino and Fran{\c c}ois, Romain and Grolemund, Garrett and Hayes, Alex and Henry, Lionel and Hester, Jim and Kuhn, Max and Pedersen, Thomas Lin and Miller, Evan and Bache, Stephan Milton and M{\"u}ller, Kirill and Ooms, Jeroen and Robinson, David and Seidel, Dana Paige and Spinu, Vitalie and Takahashi, Kohske and Vaughan, Davis and Wilke, Claus and Woo, Kara and Yutani, Hiroaki},
   year = {2019},
@@ -921,13 +779,6 @@
   number = {43},
   pages = {1686},
   doi = {10.21105/joss.01686}
-}
-
-@misc{wikipediacontributorsSouthernOntarioWikipedia2023,
-  title = {Southern {{Ontario}} \textemdash{} {{Wikipedia}}, {{The Free Encyclopedia}}},
-  author = {{Wikipedia contributors}},
-  year = {2023},
-  url = {https://en.wikipedia.org/w/index.php?title=Southern_Ontario&oldid=1161616122}
 }
 
 @misc{WorldHealthOrganizationPlague,
@@ -939,23 +790,6 @@
   langid = {english}
 }
 
-@article{worobeyHuananSeafoodWholesale2022,
-  title = {The {{Huanan Seafood Wholesale Market}} in {{Wuhan}} Was the Early Epicenter of the {{COVID-19}} Pandemic},
-  author = {Worobey, Michael and Levy, Joshua I. and Malpica Serrano, Lorena and {Crits-Christoph}, Alexander and Pekar, Jonathan E. and Goldstein, Stephen A. and Rasmussen, Angela L. and Kraemer, Moritz U. G. and Newman, Chris and Koopmans, Marion P. G. and Suchard, Marc A. and Wertheim, Joel O. and Lemey, Philippe and Robertson, David L. and Garry, Robert F. and Holmes, Edward C. and Rambaut, Andrew and Andersen, Kristian G.},
-  year = {2022},
-  month = aug,
-  journal = {Science},
-  volume = {377},
-  number = {6609},
-  pages = {951--959},
-  issn = {0036-8075, 1095-9203},
-  doi = {10.1126/science.abp8715},
-  url = {https://www.science.org/doi/10.1126/science.abp8715},
-  urldate = {2023-06-25},
-  abstract = {Understanding how severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2) emerged in 2019 is critical to preventing future zoonotic outbreaks before they become the next pandemic. The Huanan Seafood Wholesale Market in Wuhan, China, was identified as a likely source of cases in early reports, but later this conclusion became controversial. We show here that the earliest known COVID-19 cases from December 2019, including those without reported direct links, were geographically centered on this market. We report that live SARS-CoV-2\textendash susceptible mammals were sold at the market in late 2019 and that within the market, SARS-CoV-2\textendash positive environmental samples were spatially associated with vendors selling live mammals. Although there is insufficient evidence to define upstream events, and exact circumstances remain obscure, our analyses indicate that the emergence of SARS-CoV-2 occurred through the live wildlife trade in China and show that the Huanan market was the epicenter of the COVID-19 pandemic.           ,              Pandemic epicenter                            As 2019 turned into 2020, a coronavirus spilled over from wild animals into people, sparking what has become one of the best documented pandemics to afflict humans. However, the origins of the pandemic in December 2019 are controversial. Worobey               et al               . amassed the variety of evidence from the City of Wuhan, China, where the first human infections were reported. These reports confirm that most of the earliest human cases centered around the Huanan Seafood Wholesale Market. Within the market, the data statistically located the earliest human cases to one section where vendors of live wild animals congregated and where virus-positive environmental samples concentrated. In a related report, Pekar               et al               . found that genomic diversity before February 2020 comprised two distinct viral lineages, A and B, which were the result of at least two separate cross-species transmission events into humans (see the Perspective by Jiang and Wang). The precise events surrounding virus spillover will always be clouded, but all of the circumstantial evidence so far points to more than one zoonotic event occurring in Huanan market in Wuhan, China, likely during November\textendash December 2019. \textemdash CA                        ,              Spatial distributions of early cases and environmental samples show that SARS-CoV-2 emergence was associated with the wildlife trade.},
-  langid = {english}
-}
-
 @article{ZackBeauchampBlackDeathUtter2016,
   title = {The {{Black Death}}'s Utter Destruction of 14th-Century {{Europe}}, in One Scary {{GIF}}},
   author = {{Zack Beauchamp}},
@@ -964,13 +798,6 @@
   journal = {Vox},
   url = {https://www.vox.com/2016/4/17/11435620/black-death-europe-gif},
   urldate = {2023-07-12},
-  abstract = {The Black Death was an epidemic of bubonic plague that devastated Europe in the mid-14th century, killing an estimated 60 percent of Europe's entire population. And it spread scarily quickly just over the course of six years}
-}
-
-@article{zackbeauchampHttpsWwwVox,
-  title = {{{https://www.vox.com/2016/4/17/11435620/black-death-europe-gif}}},
-  author = {{Zack Beauchamp}},
-  journal = {Vox},
   abstract = {The Black Death was an epidemic of bubonic plague that devastated Europe in the mid-14th century, killing an estimated 60 percent of Europe's entire population. And it spread scarily quickly just over the course of six years}
 }
 
